bpo-35504: Fix segfaults and SystemErrors when deleting certain attrs